--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "test": "jest"
   },
   "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-native-firebase/app": "^20.1.0",
     "@react-native-firebase/auth": "^20.1.0",
     "@react-navigation/drawer": "^6.6.15",
@@ -22,7 +24,8 @@
     "react-native-gesture-handler": "^2.16.2",
     "react-native-reanimated": "^3.11.0",
     "react-native-safe-area-context": "^4.10.3",
-    "react-native-screens": "^3.31.1"
+    "react-native-screens": "^3.31.1",
+    "react-native-svg": "^15.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
